--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,4 +1,3 @@
-allow 100.28.178.23;
 allow 102.130.113.9;
 allow 102.130.117.167;
 allow 103.109.101.105;
@@ -6,6 +5,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.208.86.5;
 allow 103.251.167.10;
@@ -195,6 +195,7 @@ allow 172.104.214.41;
 allow 172.104.243.155;
 allow 172.105.161.162;
 allow 172.232.164.52;
+allow 172.233.108.234;
 allow 172.234.33.174;
 allow 172.81.131.110;
 allow 172.81.131.111;
@@ -212,6 +213,7 @@ allow 176.58.100.98;
 allow 176.97.114.202;
 allow 176.97.114.252;
 allow 178.162.209.56;
+allow 178.17.170.184;
 allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.174.14;
@@ -293,6 +295,7 @@ allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
 allow 185.177.151.34;
+allow 185.181.60.135;
 allow 185.181.61.115;
 allow 185.181.61.142;
 allow 185.181.61.18;
@@ -1075,6 +1078,7 @@ allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
+allow 2a00:1dc0:caff:178::982b;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
@@ -1084,6 +1088,7 @@ allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
+allow 2a01:7e02::f03c:94ff:fe88:6fd4;
 allow 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
@@ -1453,6 +1458,7 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
+allow 44.195.123.229;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1651,7 +1657,6 @@ allow 82.153.138.24;
 allow 82.197.182.161;
 allow 82.221.131.5;
 allow 82.221.131.71;
-allow 82.221.139.190;
 allow 82.68.49.227;
 allow 83.217.9.73;
 allow 83.96.213.63;
