--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -1,4 +1,3 @@
-set_real_ip_from 100.28.178.23;
 set_real_ip_from 102.130.113.9;
 set_real_ip_from 102.130.117.167;
 set_real_ip_from 103.109.101.105;
@@ -6,6 +5,7 @@ set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
 set_real_ip_from 103.172.134.26;
+set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.208.86.5;
 set_real_ip_from 103.251.167.10;
@@ -195,6 +195,7 @@ set_real_ip_from 172.104.214.41;
 set_real_ip_from 172.104.243.155;
 set_real_ip_from 172.105.161.162;
 set_real_ip_from 172.232.164.52;
+set_real_ip_from 172.233.108.234;
 set_real_ip_from 172.234.33.174;
 set_real_ip_from 172.81.131.110;
 set_real_ip_from 172.81.131.111;
@@ -212,6 +213,7 @@ set_real_ip_from 176.58.100.98;
 set_real_ip_from 176.97.114.202;
 set_real_ip_from 176.97.114.252;
 set_real_ip_from 178.162.209.56;
+set_real_ip_from 178.17.170.184;
 set_real_ip_from 178.17.170.23;
 set_real_ip_from 178.17.171.102;
 set_real_ip_from 178.17.174.14;
@@ -293,6 +295,7 @@ set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.165.190.111;
 set_real_ip_from 185.170.114.25;
 set_real_ip_from 185.177.151.34;
+set_real_ip_from 185.181.60.135;
 set_real_ip_from 185.181.61.115;
 set_real_ip_from 185.181.61.142;
 set_real_ip_from 185.181.61.18;
@@ -1075,6 +1078,7 @@ set_real_ip_from 2a00:1b88:4::2;
 set_real_ip_from 2a00:1b88:4::4;
 set_real_ip_from 2a00:1dc0:caff:138::94d2;
 set_real_ip_from 2a00:1dc0:caff:15::45dc;
+set_real_ip_from 2a00:1dc0:caff:178::982b;
 set_real_ip_from 2a00:1dc0:caff:73::a568;
 set_real_ip_from 2a00:1dc0:caff:8b::24bd;
 set_real_ip_from 2a00:99a0:0:1000::2;
@@ -1084,6 +1088,7 @@ set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
+set_real_ip_from 2a01:7e02::f03c:94ff:fe88:6fd4;
 set_real_ip_from 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:2970:1001::4b;
@@ -1453,6 +1458,7 @@ set_real_ip_from 37.252.255.135;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.97.116.244;
+set_real_ip_from 44.195.123.229;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
@@ -1651,7 +1657,6 @@ set_real_ip_from 82.153.138.24;
 set_real_ip_from 82.197.182.161;
 set_real_ip_from 82.221.131.5;
 set_real_ip_from 82.221.131.71;
-set_real_ip_from 82.221.139.190;
 set_real_ip_from 82.68.49.227;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.96.213.63;
