--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -199,6 +199,7 @@ allow 172.234.33.174;
 allow 172.81.131.110;
 allow 172.81.131.111;
 allow 172.81.131.139;
+allow 172.81.131.156;
 allow 172.81.132.94;
 allow 173.230.142.131;
 allow 173.232.195.137;
@@ -240,7 +241,6 @@ allow 179.43.159.78;
 allow 179.43.167.205;
 allow 179.43.182.232;
 allow 179.43.182.58;
-allow 179.48.251.188;
 allow 180.150.226.99;
 allow 184.105.48.40;
 allow 185.100.85.132;
@@ -1176,6 +1176,7 @@ allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:104:fe02::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:82c0::1;
+allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:4b9e::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
@@ -1449,7 +1450,6 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
-allow 34.224.47.78;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.239.59;
@@ -1571,6 +1571,7 @@ allow 5.255.100.126;
 allow 5.255.100.219;
 allow 5.255.100.224;
 allow 5.255.100.26;
+allow 5.255.101.10;
 allow 5.255.103.190;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1597,6 +1598,7 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
+allow 54.156.250.144;
 allow 5.42.66.6;
 allow 5.42.80.232;
 allow 5.42.80.233;
