--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -358,6 +358,7 @@ deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:104:fe02::1;
 deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:105:82c0::1;
+deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:108:4b9e::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
