--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -199,6 +199,7 @@ set_real_ip_from 172.234.33.174;
 set_real_ip_from 172.81.131.110;
 set_real_ip_from 172.81.131.111;
 set_real_ip_from 172.81.131.139;
+set_real_ip_from 172.81.131.156;
 set_real_ip_from 172.81.132.94;
 set_real_ip_from 173.230.142.131;
 set_real_ip_from 173.232.195.137;
@@ -240,7 +241,6 @@ set_real_ip_from 179.43.159.78;
 set_real_ip_from 179.43.167.205;
 set_real_ip_from 179.43.182.232;
 set_real_ip_from 179.43.182.58;
-set_real_ip_from 179.48.251.188;
 set_real_ip_from 180.150.226.99;
 set_real_ip_from 184.105.48.40;
 set_real_ip_from 185.100.85.132;
@@ -1176,6 +1176,7 @@ set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:104:fe02::1;
 set_real_ip_from 2a04:52c0:105:78fc::1;
 set_real_ip_from 2a04:52c0:105:82c0::1;
+set_real_ip_from 2a04:52c0:106:394::1;
 set_real_ip_from 2a04:52c0:108:4b9e::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
 set_real_ip_from 2a04:52c0:116:e0e3::1;
@@ -1449,7 +1450,6 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.42.185.134;
-set_real_ip_from 34.224.47.78;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.239.59;
@@ -1571,6 +1571,7 @@ set_real_ip_from 5.255.100.126;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.224;
 set_real_ip_from 5.255.100.26;
+set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.103.190;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
@@ -1597,6 +1598,7 @@ set_real_ip_from 5.2.72.110;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 5.34.182.203;
+set_real_ip_from 54.156.250.144;
 set_real_ip_from 5.42.66.6;
 set_real_ip_from 5.42.80.232;
 set_real_ip_from 5.42.80.233;
