--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -99,7 +99,6 @@ allow 107.189.8.238;
 allow 107.189.8.5;
 allow 107.189.8.56;
 allow 107.189.8.65;
-allow 107.22.192.135;
 allow 108.181.124.143;
 allow 108.181.27.205;
 allow 108.181.69.243;
@@ -243,6 +242,7 @@ allow 179.43.167.205;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
+allow 18.209.10.27;
 allow 184.105.48.40;
 allow 185.100.85.132;
 allow 185.100.85.22;
@@ -916,6 +916,7 @@ allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
 allow 23.155.8.104;
+allow 23.165.104.119;
 allow 23.236.122.62;
 allow 23.26.133.152;
 allow 23.94.211.25;
@@ -943,6 +944,7 @@ allow 2600:3c0a::f03c:94ff:fe5a:3a17;
 allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
+allow 2602:f9f3:0:2::3d;
 allow 2602:f9f3:0:2::8d;
 allow 2602:f9f3:0:2::91;
 allow 2602:fc24:12:77c0::1;
@@ -1526,7 +1528,6 @@ allow 45.83.104.137;
 allow 45.9.148.219;
 allow 45.92.1.74;
 allow 45.94.31.180;
-allow 45.95.169.184;
 allow 45.95.169.223;
 allow 45.95.169.224;
 allow 45.95.169.225;
@@ -1543,6 +1544,7 @@ allow 46.226.164.14;
 allow 46.232.251.191;
 allow 46.234.47.105;
 allow 46.38.255.27;
+allow 50.116.60.12;
 allow 50.3.182.133;
 allow 50.3.182.156;
 allow 51.15.249.160;
