--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -128,6 +128,7 @@ deny 2600:3c0a::f03c:94ff:fe5a:3a17;
 deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:2e6:0:6::;
+deny 2602:f9f3:0:2::3d;
 deny 2602:f9f3:0:2::8d;
 deny 2602:f9f3:0:2::91;
 deny 2602:fc24:12:77c0::1;
