--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -5,6 +5,7 @@ set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
 set_real_ip_from 103.172.134.26;
+set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.208.86.5;
 set_real_ip_from 103.251.167.10;
@@ -119,6 +120,7 @@ set_real_ip_from 109.70.100.68;
 set_real_ip_from 109.70.100.69;
 set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
+set_real_ip_from 118.163.74.160;
 set_real_ip_from 121.78.28.175;
 set_real_ip_from 123.253.35.32;
 set_real_ip_from 125.212.241.131;
@@ -820,6 +822,7 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:8;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:780:107:b::85;
 set_real_ip_from 2001:910:1400:107::2;
+set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1600:472a::1;
 set_real_ip_from 2001:bc8:700:9212::1;
 set_real_ip_from 2001:bf0:666::666;
@@ -1447,6 +1450,7 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.42.185.134;
+set_real_ip_from 34.199.85.216;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.239.59;
@@ -1563,7 +1567,6 @@ set_real_ip_from 51.89.153.112;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
-set_real_ip_from 52.201.82.246;
 set_real_ip_from 5.255.100.126;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.26;
@@ -1660,7 +1663,6 @@ set_real_ip_from 82.197.182.161;
 set_real_ip_from 82.221.131.5;
 set_real_ip_from 82.221.131.71;
 set_real_ip_from 82.221.139.190;
-set_real_ip_from 82.68.49.227;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.96.213.63;
 set_real_ip_from 83.97.20.77;
@@ -1712,6 +1714,7 @@ set_real_ip_from 91.103.253.141;
 set_real_ip_from 91.132.144.59;
 set_real_ip_from 91.139.160.150;
 set_real_ip_from 91.202.5.104;
+set_real_ip_from 91.203.144.194;
 set_real_ip_from 91.206.26.26;
 set_real_ip_from 91.208.197.144;
 set_real_ip_from 91.208.75.153;
@@ -1727,7 +1730,6 @@ set_real_ip_from 91.219.237.56;
 set_real_ip_from 91.219.239.166;
 set_real_ip_from 91.92.109.126;
 set_real_ip_from 91.92.109.43;
-set_real_ip_from 92.133.238.108;
 set_real_ip_from 92.243.24.163;
 set_real_ip_from 92.246.138.145;
 set_real_ip_from 92.246.84.133;
